<resources>
    <string name="app_name">Chat App</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_sign_up">Not Registered? Sign up</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in">Already Registered? Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="DefaultBaseUrl">http://10.0.2.2:5000/api/</string>
    <string name="ApiPath">/api/</string>
    <string name="BaseUrl">BaseUrl</string>
    <string name="preference_file_key">com.example.androidapp.PREFERENCE_FILE_KEY</string>
    <string name="display_name_tmp">Display Name Here</string>
    <string name="last_message_tmp">Last Message Date Here</string>
    <string name="add_contact_btn_content_desc">Add Contact</string>
    <string name="contact_list_title">Contact List</string>
    <string name="logout_img_btn_content_desc">Logout</string>
    <string name="chat_user_display_name">Display Name</string>
    <string name="card_view_image_content_desc">User\'s profile image.</string>
    <string name="send_btn_content_desc">Send</string>
    <string name="chat_et_hint">Enter your message…</string>
    <string name="chat_profile_pic_content_desc">Profile Picture</string>
    <string name="add_contact_enter_name_hint">Enter contact name…</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <!-- keys and shared preferences for the app. -->
    <string name="jwt_token_key">jwt_token</string>
    <string name="username_key">username</string>
    <string name="chat_id_key">chat_id</string>
    <string name="logged_in_key">logged_in</string>
    <string name="shared_prefs_name">MyPrefs</string>
    <string name="fcm_token_key">fcm_token</string>

    <!-- Strings for settings activity. -->
    <string name="chat_app_settings">Chat App Settings</string>
    <string name="server_address">Server Address</string>
    <string name="select">Select</string>
    <string name="settings">Settings</string>
</resources>

